added article deleted analytics

--- a/_bib/papers.bib
+++ b/_bib/papers.bib
@@ -1,3 +1,21 @@
+@inproceedings{Vassilakis_2019,
+ abstract = {Digital games designed for children and adolescents in the Diabetics Education (DE) context aim at positively influencing diabetics' behavior or teaching DE knowledge and skills. Previous work has not considered playful learning of difficult content, such as the Carbohydrate Counting Method, which involves counting the number of carbohydrate grams in a meal and matching that to the appropriate dose of insulin in order to manage the blood glucose levels. Sugar Mario was designed to have a familiar and simple gameplay based on classical platform video games, such as Super Mario, Donkey Kong, and other similar games. The carbohydrate counting method was seamlessly integrated in the gameplay in order to provide an educating, entertaining, and compelling experience to diabetics of all ages, even family members and friends. Our implementation suggests that a classic and engaging platform video game is malleable to the infusion of serious content without significant dilution of the gameplay. Notably, a diabetic person has designed Sugar Mario and the source code has been shared online for inspection and contribution by interested parties.},
+ author = {Vassilakis, Nikolaos and Garneli, Varvara and Patiniotis, Konstantinos and Deliyannis, Ioannis and Chorianopoulos, Konstantinos},
+ title = {Adapting a Classic Platform Video Game to the Carbohydrate Counting Method for Insulin-Dependent Diabetics},
+ booktitle = {Proceedings of the 5th EAI International Conference on Smart Objects and Technologies for Social Good},
+ series = {GoodTechs '19},
+ year = {2019},
+ isbn = {978-1-4503-6261-0},
+ location = {Valencia, Spain},
+ pages = {149--154},
+ numpages = {6},
+ link = {Vassilakis_2019.pdf},
+ doi = {10.1145/3342428.3342681},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Carbohydrate Counting Method, Diabetes Education, Health Games, Serious Game},
+}
+
 @article{Merkouris_2019b,
  author = {Merkouris, Alexandros and Chorianopoulos, Konstantinos},
  title = {Programming Embodied Interactions with a Remotely Controlled Educational Robot},
