--- a/_bib/papers.bib
+++ b/_bib/papers.bib
@@ -1,3 +1,46 @@
+@inproceedings{Alexandrakis_2019,
+author="Alexandrakis, Diogenis
+and Chorianopoulos, Konstantinos
+and Tselios, Nikolaos",
+editor="Lamas, David
+and Loizides, Fernando
+and Nacke, Lennart
+and Petrie, Helen
+and Winckler, Marco
+and Zaphiris, Panayiotis",
+title="Insights on Older Adults' Attitudes and Behavior Through the Participatory Design of an Online Storytelling Platform",
+booktitle="Human-Computer Interaction -- INTERACT 2019",
+year="2019",
+publisher="Springer International Publishing",
+address="Cham",
+pages="465--474",
+doi = {10.1007/978-3-030-29381-9_29},
+link = {Alexandrakis_2019.pdf},
+abstract="While digital technology adoption by older adults rises constantly, the design of new technologies often overlooks the culture of the end users, which, in turn, has an impact on the acceptance and use by many of them. Based on the fact that technology adoption by this age group in Greece remains low, compared to the vast majority of the EU countries, our goal in this paper is to gain further insights into the user requirements of older adults as web 2.0 storytellers in order for designers to better address their needs. For this purpose, we implemented participatory design with five older adults in Greece over a twelve-week period, combined with an evolutionary prototyping approach, as we noticed during our sessions that our participants had a difficulty in envisioning and proposing novel technologies. In order to analyze and interpret the feedback that we collected during the design sessions, the digital storytelling sessions and the in-depth interviews, we made use of the Activity Theory, as well as age-related and self-presentation frameworks. Through probing our participants' usage and design preferences of the storytelling platform, we came up with a set of attributes and motives that seem to expound their online choices. Issues of loneliness and social inclusion, generativity and computer mediated communication, among others, have emerged. Additionally, differences and similarities with findings from other studies have been indicated.",
+isbn="978-3-030-29381-9"
+}
+
+@inproceedings{Kamilakis_2019,
+author="Kamilakis, Manousos
+and Chorianopoulos, Konstantinos",
+editor="Lamas, David
+and Loizides, Fernando
+and Nacke, Lennart
+and Petrie, Helen
+and Winckler, Marco
+and Zaphiris, Panayiotis",
+title="Mobile Mapmaking: A Field Study of Gamification and Cartographic Editing",
+booktitle="Human-Computer Interaction -- INTERACT 2019",
+year="2019",
+publisher="Springer International Publishing",
+address="Cham",
+pages="427--435",
+doi = {10.1007/978-3-030-29384-0_26},
+link = {Kamilakis_2019.pdf},
+abstract="Digital mapmaking has traditionally been a desktop computing activity with dedicated graphical (native or web) applications that strongly depend on the precision of mouse input. In addition, digital mapmaking also has a strong pillar on field observations, which have remained a separate task to the final mapmaking. In this work, we present to users a mobile application that combines the strengths of graphical mapmaking user interfaces with the actual geographical context into an integrated and collaborative user interface. In particular, the application implements three representative mobile mapmaking tasks (path recording, path editing and path reviewing) and includes gamification elements. A field experiment was conducted with thirty-six participants for two twenty-day periods during which they were asked to provide information about the pedestrian network of an urban region using the app. The results from questionnaire responses and contribution data showed that most users prefer recording their path, which is also the work with the lowest interaction. Moreover, gamification did not bring the expected results and the more difficult tasks were undertaken by few devoted users. Further research is needed to examine how interface design could better engage committed users in the aforementioned mapmaking task types.",
+isbn="978-3-030-29384-0"
+}
+
 @inproceedings{Vassilakis_2019,
  abstract = {Digital games designed for children and adolescents in the Diabetics Education (DE) context aim at positively influencing diabetics' behavior or teaching DE knowledge and skills. Previous work has not considered playful learning of difficult content, such as the Carbohydrate Counting Method, which involves counting the number of carbohydrate grams in a meal and matching that to the appropriate dose of insulin in order to manage the blood glucose levels. Sugar Mario was designed to have a familiar and simple gameplay based on classical platform video games, such as Super Mario, Donkey Kong, and other similar games. The carbohydrate counting method was seamlessly integrated in the gameplay in order to provide an educating, entertaining, and compelling experience to diabetics of all ages, even family members and friends. Our implementation suggests that a classic and engaging platform video game is malleable to the infusion of serious content without significant dilution of the gameplay. Notably, a diabetic person has designed Sugar Mario and the source code has been shared online for inspection and contribution by interested parties.},
  author = {Vassilakis, Nikolaos and Garneli, Varvara and Patiniotis, Konstantinos and Deliyannis, Ioannis and Chorianopoulos, Konstantinos},
