--- a/_bib/papers.bib
+++ b/_bib/papers.bib
@@ -1,3 +1,25 @@
+@InProceedings{Garneli_2019c,
+author="Garneli, Varvara
+and Sotides, Christos
+and Patiniotis, Konstantinos
+and Deliyannis, Ioannis
+and Chorianopoulos, Konstantinos",
+editor="Liapis, Antonios
+and Yannakakis, Georgios N.
+and Gentile, Manuel
+and Ninaus, Manuel",
+title="Designing a 2D Platform Game with Mathematics Curriculum",
+booktitle="Games and Learning Alliance",
+year="2019",
+publisher="Springer International Publishing",
+address="Cham",
+pages="42--51",
+link = {Garneli_2019c.pdf},
+abstract="New technologies and media aim at triggering student interest in mathematics and at making learning an entertaining process. However, playful math games need to provide learners with a better experience, which is connected with an engaging gameplay. Popular game mechanics could be used in order to integrate learning in the playing activities. This research employs the Super Mario game format for the design of a playful educational serious game in the context of math education. Mario Maths is addressed to students of 12 and 13 years old and aims to the practice of divisibility criteria. Mario collects numbers instead of coins that must be exactly divided with the number - target, avoiding or eliminating the wrong answers. A wrong choice transports Mario to a subterranean world which informs him for his mistake, but with no influence on the final goal achievement according to a constructive error and trial method. In the end of each track, the player is taking feedback of his effort in a self-assessment process. Mario Maths was developed to be used as a complementary educational tool for students who might be attracted from such forms of media. (https://github.com/ionio-seriousgames/mario-maths).",
+isbn="978-3-030-34350-7"
+}
+
+
 @inproceedings{Alexandrakis_2019,
 author="Alexandrakis, Diogenis
 and Chorianopoulos, Konstantinos
@@ -101,9 +123,9 @@ DOI = {10.3390/mti3030055}
 author = {Varvara Garneli and Konstantinos Chorianopoulos},
 title = {The effects of video game making within science content on student computational thinking skills and performance},
 journal = {Interactive Technology and Smart Education},
-volume = {0},
-number = {0},
-pages = {null},
+volume = {16},
+number = {4},
+pages = {301--318},
 year = {2019},
 doi = {10.1108/ITSE-11-2018-0097},
 URL = {https://www.emeraldinsight.com/doi/abs/10.1108/ITSE-11-2018-0097},
@@ -116,8 +138,9 @@ author={Merkouris, Alexandros and Chorianopoulou, Betty and Chorianopoulos, Kons
 title={Understanding the Notion of Friction Through Gestural Interaction with a Remotely Controlled Robot},
 journal={Journal of Science Education and Technology},
 year={2019},
-number={0},
-volume= {0},
+number={28},
+volume= {3},
+pages={209--221},
 abstract={Embodied interaction with tangible interactive objects can be beneficial for introducing abstract scientific concepts, especially for young learners. Nevertheless, there is limited comparative evaluation of alternative interaction modalities with contemporary educational technology, such as tablets and robots. In this study, we explore the effects of touch and gestural interaction with a tablet and a robot, in the context of a primary education physics course about the notion of friction. For this purpose, 56 students participated in a between-groups study that involved four computationally enhanced interventions which correspond to different input and output modalities, respectively: (1) touch-virtual, (2) touch-physical, (3) hand gesture-virtual, and (4) hand gesture-physical. We measured students' friction knowledge and examined their views. We found that the physical conditions had greater learning impact concerning friction knowledge compared to the virtual way. Additionally, physical manipulation benefited those learners who had misconceptions or limited initial knowledge about friction. We also found that students who used the more familiar touchscreen interface demonstrated similar learning gains and reported higher usability compared to those using the hand-tilt interface. These findings suggest that user interface familiarity should be carefully balanced with user interface congruency, in order to establish accessibility to a scientific concept in a primary education context.},
 issn={1573-1839},
 doi={10.1007/s10956-018-9760-2},
